A little more on the notebook

--- a/MVP1/data fetching.ipynb
+++ b/MVP1/data fetching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
        "{'heading': 165, 'lat': 37.755463, 'lon': -122.418823, 'vid': '7257'}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        " 'sid': '5538'}"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,16 +180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Scale latitude to be proportional with longitude\n",
     "lat_scale = math.cos(37.7*math.pi/180)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +202,7 @@
        " 'sid': '5590'}"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,6 +212,104 @@
     "stops_14 = route_list[0]['stops']\n",
     "\n",
     "get_closest(bus_1, stops_14, lat_scale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'7216'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "route_list[0]['routeStates'][1]['vehicles'][2]['vid']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Closest stops for a single bus over time series\n",
+    "\n",
+    "Robustness: Buses may or may not always have same index in `vehicles` array? (Could query by `vid` with some effort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1539490450077, 'Mission St & Excelsior Ave'),\n",
+       " (1539490465083, 'Mission St & Excelsior Ave'),\n",
+       " (1539490480087, 'Mission St & Silver Ave'),\n",
+       " (1539490495092, 'Mission St & Silver Ave')]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(int(x['vtime']), get_closest(x['vehicles'][0],stops_14)['name']) for x in route_list[0]['routeStates']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1539490450077, 'Mission St & 4th St'),\n",
+       " (1539490465083, 'Mission St & 4th St'),\n",
+       " (1539490480087, 'Mission St & 4th St'),\n",
+       " (1539490495092, 'Mission St & 3rd St')]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(int(x['vtime']), get_closest(x['vehicles'][13],stops_14)['name']) for x in route_list[0]['routeStates']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1539490450077, 'Mission St & 30th St'),\n",
+       " (1539490465083, 'Mission St & Cortland Ave'),\n",
+       " (1539490480087, 'Mission St & Cortland Ave'),\n",
+       " (1539490495092, 'Mission St & Cortland Ave')]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(int(x['vtime']), get_closest(x['vehicles'][9],route_list[1]['stops'])['name']) for x in route_list[1]['routeStates']]"
    ]
   }
  ],
