Additions to notebook

--- a/MVP1/data fetching.ipynb
+++ b/MVP1/data fetching.ipynb
@@ -240,7 +240,7 @@
    "source": [
     "### Closest stops for a single bus over time series\n",
     "\n",
-    "Robustness: Buses may or may not always have same index in `vehicles` array? (Could query by `vid` with some effort)"
+    "Robustness: Buses may not always have same index in `vehicles` array. Can query by `vid`, though it's more verbose."
    ]
   },
   {
@@ -310,6 +310,29 @@
    ],
    "source": [
     "[(int(x['vtime']), get_closest(x['vehicles'][9],route_list[1]['stops'])['name']) for x in route_list[1]['routeStates']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1539490450077, 'Mission St & 30th St'),\n",
+       " (1539490465083, 'Mission St & Cortland Ave'),\n",
+       " (1539490480087, 'Mission St & Cortland Ave'),\n",
+       " (1539490495092, 'Mission St & Cortland Ave')]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[(int(x['vtime']), get_closest(next(y for y in x['vehicles'] if y['vid']=='6653'),route_list[1]['stops'])['name']) for x in route_list[1]['routeStates']]"
    ]
   }
  ],
