--- a/MVP1/data fetching.ipynb
+++ b/MVP1/data fetching.ipynb
@@ -151,26 +151,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_dist(loc1,loc2,lat_weight=1,lon_weight=1):\n",
-    "    return abs(loc1['lat']-loc2['lat'])/lat_weight + abs(loc1['lon']-loc2['lon'])/lon_weight"
+    "def get_dist(loc1,loc2,lat_scale=1,lon_scale=1):\n",
+    "    return abs(loc1['lat']-loc2['lat'])*lat_scale + abs(loc1['lon']-loc2['lon'])*lon_scale"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_closest(loc,stop_list,lat_weight=1,lon_weight=1):\n",
+    "def get_closest(loc,stop_list,lat_scale=1,lon_scale=1):\n",
     "    # Running minimum distance\n",
     "    running_min=500 #Dumb high number\n",
     "\n",
     "    for stop in stop_list:\n",
-    "        current_min=get_dist(loc,stop,lat_weight,lon_weight)\n",
+    "        current_min=get_dist(loc,stop,lat_scale,lon_scale)\n",
     "        if current_min < running_min:\n",
     "            running_min = current_min\n",
     "            running_best_stop = stop\n",
@@ -180,12 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Scale latitude to be proportional with longitude\n",
-    "lat_scale = math.cos(37.7*math.pi/180)"
+    "# Scale latitude and longitude to miles\n",
+    "scale_miles =  {\n",
+    "    'lat_scale' : 69.0,\n",
+    "    'lon_scale' : 54.8\n",
+    "}\n",
+    "# math.cos(37.7*math.pi/180)"
    ]
   },
   {
@@ -216,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +229,7 @@
        "'7216'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +261,7 @@
        " (1539490495092, 'Mission St & Silver Ave')]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +284,7 @@
        " (1539490495092, 'Mission St & 3rd St')]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +307,7 @@
        " (1539490495092, 'Mission St & Cortland Ave')]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,8 +317,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Querying by `vid`, using comprehension syntax"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -326,13 +337,87 @@
        " (1539490495092, 'Mission St & Cortland Ave')]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "[(int(x['vtime']), get_closest(next(y for y in x['vehicles'] if y['vid']=='6653'),route_list[1]['stops'])['name']) for x in route_list[1]['routeStates']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also compute the closest bus to a given stop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['7227', '7227', '7227', '7202']"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[get_closest(stops_14[7], x['vehicles'])['vid'] for x in route_list[0]['routeStates']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And distance to closest bus / stop in miles."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.01752807999944537, 'Mission St & Francis St')"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda x: (get_dist(x,bus_1,**scale_miles),x['name']))(get_closest(bus_1,stops_14))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.4950115000003563, '7202')"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(lambda x: (get_dist(x,stops_14[7],**scale_miles),x['vid']))(get_closest(stops_14[7],route_list[0]['routeStates'][3]['vehicles']))"
    ]
   }
  ],
