add cell for downloading arrival data as json

--- a/mykelu/stop state.ipynb
+++ b/mykelu/stop state.ipynb
@@ -29,6 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
     "import requests\n",
     "\n",
     "from datetime import datetime\n",
@@ -483,6 +484,78 @@
     "plt.legend(loc='best')\n",
     "          \n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download Arrival Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data will be in format specified below. The data can contain duplicate bus IDs because buses can complete the route and return back to the same stop. To handle this, values belonging to a particular bus is split when there is at least an hour gap within that data. This also means that `busID` can't be used as keys.\n",
+    "\n",
+    "`values` is a 2D array with the first column being timestamps in milliseconds, and the second column being distance from the stop in meters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "data = [\n",
+    "    {\n",
+    "        'busID': '5442',\n",
+    "        'values': [\n",
+    "            [1539849629598, 1658.0030591047],\n",
+    "            [1539849659612, 1535.3449763492],\n",
+    "            [1539849674618, 1535.3449763492],\n",
+    "            [1539849689624, 1535.3449763492]\n",
+    "            ...\n",
+    "        ]\n",
+    "    }\n",
+    "    ...\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = []\n",
+    "\n",
+    "for bus_id in arrivals['VID'].unique():\n",
+    "    # obtain distance data for this bus\n",
+    "    bus = arrivals[arrivals['VID'] == bus_id].sort_values('TIME')[['TIME', 'DIST']]\n",
+    "    \n",
+    "    # split data into groups when there is at least an hour gap between data points\n",
+    "    group_ids = (bus['TIME'] > (bus['TIME'].shift() + 60*60*1000)).cumsum()\n",
+    "    \n",
+    "    # store groups\n",
+    "    for _, group in bus.groupby(group_ids):\n",
+    "        data.append({\n",
+    "            'busID': bus_id,\n",
+    "            'values': eval(group.to_json(orient='values'))\n",
+    "        })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"arrivals.json\", 'w') as f:\n",
+    "    f.write(json.dumps(data))"
    ]
   }
  ],
