create utility class for aggregating and writing eclipses

--- a/mykelu/eclipses.ipynb
+++ b/mykelu/eclipses.ipynb
@@ -250,6 +250,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "route = \"14\"\n",
+    "\n",
+    "timespan = (\"08:00 PST\",\n",
+    "            \"11:00 PST\")\n",
+    "\n",
+    "dates = [\n",
+    "    \"2018-11-12\",\n",
+    "    \"2018-11-13\",\n",
+    "    \"2018-11-14\",\n",
+    "    \"2018-11-15\",\n",
+    "    \"2018-11-16\",\n",
+    "\n",
+    "    \"2018-11-19\",\n",
+    "    \"2018-11-20\",\n",
+    "    \"2018-11-21\",\n",
+    "    \"2018-11-22\",\n",
+    "    \"2018-11-23\",\n",
+    "]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -261,6 +287,112 @@
    "metadata": {},
    "source": [
     "Issue: currently, if a trajectory looks like `/~V`, the left edge is selected as the nadir. Based on the data, I suspect that the initial upslope may be a GPS glitch as it's being initialized, I believe the trough on the right should be selected instead."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BusData:\n",
+    "    def __init__(self):\n",
+    "        self.data = {}\n",
+    "    \n",
+    "    @property\n",
+    "    def routes(self):\n",
+    "        return list(self.data.keys())\n",
+    "    \n",
+    "    @property\n",
+    "    def stops(self, route_id):\n",
+    "        return list(self.data.get(route_id, {}).keys())\n",
+    "    \n",
+    "    def append(self, other_data):\n",
+    "        for route_id, other_route in other_data.items():\n",
+    "            route = self.data.get(route_id)\n",
+    "            if route:\n",
+    "                for stop_id, other_stop in other_route.items():\n",
+    "                    stop = route.get(stop_id)\n",
+    "                    if stop:\n",
+    "                        stop['eclipses'].extend(other_stop['eclipses'])\n",
+    "                    else:\n",
+    "                        route[stop_id] = other_stop\n",
+    "            else:\n",
+    "                self.data[route_id] = other_route\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def read_file(cls, filename):\n",
+    "        bus_data = cls()\n",
+    "        with open(filename, 'r') as f:\n",
+    "            file_data = json.load(f)\n",
+    "        for route in file_data:\n",
+    "            for stop in route['stops']:\n",
+    "                bus_data.append({\n",
+    "                    route['route_id']: {\n",
+    "                        stop['stop_id']: {\n",
+    "                            'direction_id': stop['direction_id'],\n",
+    "                            'order': stop['order'],\n",
+    "                            'lat': stop['lat'],\n",
+    "                            'lon': stop['lon'],\n",
+    "                            'eclipses': stop['eclipses']\n",
+    "                        }\n",
+    "                    }\n",
+    "                })\n",
+    "        return bus_data\n",
+    "                \n",
+    "    \n",
+    "    def write_file(self, filename):\n",
+    "        output = [\n",
+    "            {\n",
+    "                'route_id': route_id,\n",
+    "                'stops': [\n",
+    "                    {\n",
+    "                        'stop_id': stop_id,\n",
+    "                        'direction_id': stop['direction_id'],\n",
+    "                        'order': stop['order'],\n",
+    "                        'lat': stop['lat'],\n",
+    "                        'lon': stop['lon'],\n",
+    "                        'eclipses': stop['eclipses']\n",
+    "                    }\n",
+    "                    for stop_id, stop in route.items()\n",
+    "                ]\n",
+    "            }\n",
+    "            for route_id, route in self.data.items()\n",
+    "        ]\n",
+    "        with open(filename, 'w') as f:\n",
+    "            json.dump(output, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`BusData.data` specification:\n",
+    "```\n",
+    "{\n",
+    "    route_id: {  # route_id is a str\n",
+    "        stop_id: {  # stop_id is a str\n",
+    "            direction_id: str,\n",
+    "            order: int,\n",
+    "            lat: float,\n",
+    "            lon: float,\n",
+    "            eclipses: [\n",
+    "                {\n",
+    "                    bus_id: int,\n",
+    "                    timestamp: int,\n",
+    "                },\n",
+    "                {\n",
+    "                    bus_id: int,\n",
+    "                    timestamp: int,\n",
+    "                },\n",
+    "                ...\n",
+    "            ]\n",
+    "        },\n",
+    "        ...\n",
+    "    },\n",
+    "    ...\n",
+    "}\n",
+    "```"
    ]
   },
   {
@@ -301,33 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "route = \"14\"\n",
-    "\n",
-    "timespan = (\"08:00 PST\",\n",
-    "            \"11:00 PST\")\n",
-    "\n",
-    "dates = [\n",
-    "    \"2018-11-12\",\n",
-    "    \"2018-11-13\",\n",
-    "    \"2018-11-14\",\n",
-    "    \"2018-11-15\",\n",
-    "    \"2018-11-16\",\n",
-    "\n",
-    "    \"2018-11-19\",\n",
-    "    \"2018-11-20\",\n",
-    "    \"2018-11-21\",\n",
-    "    \"2018-11-22\",\n",
-    "    \"2018-11-23\",\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -457,12 +563,13 @@
     "# grab an arbitrary stop to look at\n",
     "stop_id = requests.get(f\"http://restbus.info/api/agencies/sf-muni/routes/{route}\").json()['stops'][2]['id']\n",
     "\n",
+    "bus_data = BusData()\n",
+    "\n",
     "for date in dates:\n",
     "    start_time = int(datetime.strptime(f\"{date} {timespan[0]}\", \"%Y-%m-%d %H:%M %Z\").timestamp())*1000\n",
     "    end_time   = int(datetime.strptime(f\"{date} {timespan[1]}\", \"%Y-%m-%d %H:%M %Z\").timestamp())*1000\n",
     "    \n",
     "    data = query_graphql(start_time, end_time, route)\n",
-    "    \n",
     "    \n",
     "    if data is None:  # API might refuse to cooperate\n",
     "        print(\"API probably timed out\")\n",
@@ -480,7 +587,28 @@
     "        eclipses = find_eclipses(buses, stop)\n",
     "        nadirs = find_nadirs(eclipses)\n",
     "        \n",
-    "        show_stop(eclipses, nadirs)"
+    "        show_stop(eclipses, nadirs)\n",
+    "        \n",
+    "        bus_data.append({\n",
+    "            route: {\n",
+    "                stop_id: {\n",
+    "                    'direction_id': stop['DID'],\n",
+    "                    'order': int(stop['ORD']),\n",
+    "                    'lat': stop['LAT'],\n",
+    "                    'lon': stop['LON'],\n",
+    "                    'eclipses': [\n",
+    "                        {\n",
+    "                            'bus_id': bus_id,\n",
+    "                            'timestamp': int(timestamp)\n",
+    "                        }\n",
+    "                        for bus_id, timestamp in zip(nadirs['VID'].tolist(),\n",
+    "                                                     nadirs['TIME'].tolist())\n",
+    "                    ]\n",
+    "                }\n",
+    "            }\n",
+    "        })\n",
+    "        \n",
+    "bus_data.write_file(\"bus_data.json\")"
    ]
   }
  ],
