update BusData to use new data format

--- a/mykelu/eclipses.ipynb
+++ b/mykelu/eclipses.ipynb
@@ -324,43 +324,13 @@
     "    def read_file(cls, filename):\n",
     "        bus_data = cls()\n",
     "        with open(filename, 'r') as f:\n",
-    "            file_data = json.load(f)\n",
-    "        for route in file_data:\n",
-    "            for stop in route['stops']:\n",
-    "                bus_data.append({\n",
-    "                    route['route_id']: {\n",
-    "                        stop['stop_id']: {\n",
-    "                            'direction_id': stop['direction_id'],\n",
-    "                            'order': stop['order'],\n",
-    "                            'lat': stop['lat'],\n",
-    "                            'lon': stop['lon'],\n",
-    "                            'eclipses': stop['eclipses']\n",
-    "                        }\n",
-    "                    }\n",
-    "                })\n",
+    "            bus_data.append(json.load(f))\n",
     "        return bus_data\n",
     "                \n",
     "    \n",
     "    def write_file(self, filename):\n",
-    "        output = [\n",
-    "            {\n",
-    "                'route_id': route_id,\n",
-    "                'stops': [\n",
-    "                    {\n",
-    "                        'stop_id': stop_id,\n",
-    "                        'direction_id': stop['direction_id'],\n",
-    "                        'order': stop['order'],\n",
-    "                        'lat': stop['lat'],\n",
-    "                        'lon': stop['lon'],\n",
-    "                        'eclipses': stop['eclipses']\n",
-    "                    }\n",
-    "                    for stop_id, stop in route.items()\n",
-    "                ]\n",
-    "            }\n",
-    "            for route_id, route in self.data.items()\n",
-    "        ]\n",
     "        with open(filename, 'w') as f:\n",
-    "            json.dump(output, f)"
+    "            json.dump(self.data, f)"
    ]
   },
   {
@@ -392,42 +362,6 @@
     "    },\n",
     "    ...\n",
     "}\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "data export specification:\n",
-    "```\n",
-    "[\n",
-    "    {\n",
-    "        route_id: str,\n",
-    "        stops: [\n",
-    "            {\n",
-    "                stop_id: str,\n",
-    "                direction_id: str,\n",
-    "                order: int,\n",
-    "                lat: float,\n",
-    "                lon: float,\n",
-    "                eclipses: [\n",
-    "                    {\n",
-    "                        bus_id: int,\n",
-    "                        timestamp: int,\n",
-    "                    },\n",
-    "                    {\n",
-    "                        bus_id: int,\n",
-    "                        timestamp: int,\n",
-    "                    },\n",
-    "                    ...\n",
-    "                ]\n",
-    "            },\n",
-    "            ...\n",
-    "        ]\n",
-    "    },\n",
-    "    ...\n",
-    "]\n",
     "```"
    ]
   },
