put in the function

--- a/mykelu/eclipses.ipynb
+++ b/mykelu/eclipses.ipynb
@@ -1347,7 +1347,37 @@
     }
    ],
    "source": [
-    "pivot['timestamp'] = pivot['timestamp'].apply(lambda x: )"
+    "# pivot['timestamp'] = pivot['timestamp'].apply(lambda x: )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_average_waiting_time(stop_id, route_id, direction, time_range):\n",
+    "  # Returns the average waiting time for all buses with the given stop, route, and direction, filtered within the given time bucket \n",
+    "  # and dates\n",
+    "  \n",
+    "  # Later on, add filtering for days of week and times of year\n",
+    "    \n",
+    "    # STEPS \n",
+    "    # 1. Query GraphQL \n",
+    "    # 2. \n",
+    " \n",
+    "    \n",
+    "  return 5 # in minutes \n",
+    "\n",
+    "\n",
+    "def test_average_waiting_time():\n",
+    "  # Example use of the get_average_waiting_time() function \n",
+    "  return get_average_wait_time(\n",
+    "    \"101\", # stop id\n",
+    "    \"14\", # route number\n",
+    "    \"O\", # direction - O for outbound, I for inbound\n",
+    "    (360, 480) # number of minutes from midnight; this example means we only consider 6am-8am\n",
+    "  )\n"
    ]
   }
  ],
