Added CSVs with test data

--- a/mykelu/eclipses.ipynb
+++ b/mykelu/eclipses.ipynb
@@ -521,7 +521,7 @@
     "    for route in routes:\n",
     "        stop_ids = [stop['id']\n",
     "            for stop\n",
-    "            in requests.get(f\"http://restbus.info/api/agencies/sf-muni/routes/{route}\").json()['stops']][2:4]\n",
+    "            in requests.get(f\"http://restbus.info/api/agencies/sf-muni/routes/{route}\").json()['stops']]\n",
     "\n",
     "        for stop_id in stop_ids:\n",
     "            # check if stops to filter were provided, or if the stop_id is in the list of filtered stops\n",
