Add bus stop data to 24hr routes

--- a/kevin/pull em all.ipynb
+++ b/kevin/pull em all.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,12 @@
     "            startTime\n",
     "            routes {{\n",
     "              rid\n",
+    "              stops {{\n",
+    "                sid\n",
+    "                name\n",
+    "                lat\n",
+    "                lon\n",
+    "              }}\n",
     "              routeStates {{\n",
     "                vtime\n",
     "                vehicles {{\n",
@@ -82,7 +88,7 @@
     "    print('Final formatting...')\n",
     "    for x in route_data:\n",
     "        if x['rid'] not in r_sort.keys():\n",
-    "            r_sort[x['rid']] = {'rid':x['rid'],'routeStates':[]}\n",
+    "            r_sort[x['rid']] = {'rid':x['rid'],'routeStates':[],'stops':x['stops']}\n",
     "        r_sort[x['rid']]['routeStates'].extend(sorted(x['routeStates'], key=lambda rs: int(rs['vtime'])))\n",
     "    r_sort=list(r_sort.values())\n",
     "    print('Done')\n",
@@ -100,9 +106,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 231,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -110,12 +116,12 @@
      "output_type": "stream",
      "text": [
       "Getting data... 0\n",
-      "That took 4.4 seconds.\n",
+      "That took 5.59 seconds.\n",
       "Getting data... 1\n",
-      "That took 4.72 seconds.\n",
+      "That took 4.89 seconds.\n",
       "Final formatting...\n",
       "Done\n",
-      "That all took 9.21 seconds.\n"
+      "That all took 10.59 seconds.\n"
      ]
     }
    ],
@@ -160,6 +166,13 @@
     "        result.extend(get_some_times(all_routes[i*30:(i+1)*30],dt_params,hours=24))\n",
     "    print(f'Whole thing took {round(time.time()-t0,2)} seconds.')\n",
     "    return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Change `dt_params` to whatever date you want. `(year,month,day,hour)`"
    ]
   },
   {
@@ -334,7 +347,7 @@
     }
    ],
    "source": [
-    "allofem=get24all()"
+    "allofem=get24all(dt_params=(2018,10,15,0))"
    ]
   },
   {
