First pass at computing average time between stops

--- a/mykelu/eclipses.ipynb
+++ b/mykelu/eclipses.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -91,6 +91,7 @@
     "    try:\n",
     "        return request['data']['trynState']['routes']\n",
     "    except KeyError:\n",
+    "        print(\"KeyError\")\n",
     "        return None"
    ]
   },
@@ -384,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,6 +642,44 @@
    "source": [
     "new_stops = get_stops(dates, route)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test query optimization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wed Feb 13 06:51:06 PM: starting processing on route 12.\n",
+      "KeyError\n",
+      "Wed Feb 13 06:51:35 PM: performed query.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"{datetime.now().strftime('%a %b %d %I:%M:%S %p')}: starting processing on route 12.\")\n",
+    "start_time = int(datetime.strptime(f\"2018-11-12 {timespan[0]} -0800\", \"%Y-%m-%d %H:%M %z\").timestamp())*1000\n",
+    "end_time   = int(datetime.strptime(f\"2018-11-13 00:01 -0800\", \"%Y-%m-%d %H:%M %z\").timestamp())*1000\n",
+    "\n",
+    "data = query_graphql(start_time, end_time, '12')\n",
+    "print(f\"{datetime.now().strftime('%a %b %d %I:%M:%S %p')}: performed query.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
