--- a/kevin/pull em all.ipynb
+++ b/kevin/pull em all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +62,7 @@
     "                  lat\n",
     "                  lon\n",
     "                  heading\n",
+    "                  did\n",
     "                }}\n",
     "              }}\n",
     "            }}\n",
@@ -78,11 +79,13 @@
     "        data = json.loads(r.text)\n",
     "        try:\n",
     "            data['data']\n",
+    "            \n",
+    "            if len(data['data']['trynState']['routes']):\n",
+    "                route_data.extend(data['data']['trynState']['routes'])\n",
     "        except KeyError:\n",
-    "            print(data)\n",
+    "            print(f\"Keyerror on {route} at {dt_params}\")\n",
     "        \n",
-    "        if len(data['data']['trynState']['routes']):\n",
-    "            route_data.extend(data['data']['trynState']['routes'])\n",
+    "        \n",
     "    \n",
     "    r_sort = {}\n",
     "    print('Final formatting...')\n",
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -116,12 +119,12 @@
      "output_type": "stream",
      "text": [
       "Getting data... 0\n",
-      "That took 5.59 seconds.\n",
+      "That took 9.77 seconds.\n",
       "Getting data... 1\n",
-      "That took 4.89 seconds.\n",
+      "That took 5.93 seconds.\n",
       "Final formatting...\n",
       "Done\n",
-      "That all took 10.59 seconds.\n"
+      "That all took 15.81 seconds.\n"
      ]
     }
    ],
@@ -138,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -188,161 +191,173 @@
      "text": [
       "Chunk 1 of 3:\n",
       "Getting data... 0\n",
-      "That took 7.88 seconds.\n",
+      "That took 18.24 seconds.\n",
       "Getting data... 1\n",
-      "That took 7.19 seconds.\n",
+      "That took 4.52 seconds.\n",
       "Getting data... 2\n",
-      "That took 6.86 seconds.\n",
+      "That took 4.24 seconds.\n",
       "Getting data... 3\n",
-      "That took 6.44 seconds.\n",
+      "That took 4.0 seconds.\n",
       "Getting data... 4\n",
-      "That took 6.81 seconds.\n",
+      "That took 5.14 seconds.\n",
       "Getting data... 5\n",
-      "That took 6.92 seconds.\n",
+      "That took 15.34 seconds.\n",
       "Getting data... 6\n",
-      "That took 8.22 seconds.\n",
+      "That took 7.55 seconds.\n",
       "Getting data... 7\n",
-      "That took 6.79 seconds.\n",
+      "That took 6.5 seconds.\n",
+      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
       "Getting data... 8\n",
-      "That took 7.18 seconds.\n",
+      "That took 13.48 seconds.\n",
+      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
       "Getting data... 9\n",
-      "That took 7.77 seconds.\n",
+      "That took 14.04 seconds.\n",
+      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
       "Getting data... 10\n",
-      "That took 7.54 seconds.\n",
+      "That took 5.84 seconds.\n",
+      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
       "Getting data... 11\n",
-      "That took 6.8 seconds.\n",
+      "That took 7.06 seconds.\n",
+      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
       "Getting data... 12\n",
-      "That took 5.91 seconds.\n",
+      "That took 6.72 seconds.\n",
+      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
       "Getting data... 13\n",
-      "That took 5.61 seconds.\n",
+      "That took 7.27 seconds.\n",
+      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
       "Getting data... 14\n",
-      "That took 4.6 seconds.\n",
+      "That took 9.73 seconds.\n",
+      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
       "Getting data... 15\n",
-      "That took 3.88 seconds.\n",
+      "That took 6.87 seconds.\n",
+      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
       "Getting data... 16\n",
-      "That took 4.02 seconds.\n",
+      "That took 7.39 seconds.\n",
+      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
       "Getting data... 17\n",
-      "That took 3.58 seconds.\n",
+      "That took 9.89 seconds.\n",
+      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
       "Getting data... 18\n",
-      "That took 2.21 seconds.\n",
+      "That took 7.03 seconds.\n",
+      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
       "Getting data... 19\n",
-      "That took 1.98 seconds.\n",
+      "That took 7.36 seconds.\n",
       "Getting data... 20\n",
-      "That took 2.03 seconds.\n",
+      "That took 9.48 seconds.\n",
       "Getting data... 21\n",
-      "That took 2.33 seconds.\n",
+      "That took 8.4 seconds.\n",
       "Getting data... 22\n",
-      "That took 3.95 seconds.\n",
+      "That took 4.57 seconds.\n",
       "Getting data... 23\n",
-      "That took 5.55 seconds.\n",
+      "That took 5.11 seconds.\n",
       "Final formatting...\n",
       "Done\n",
-      "That all took 136.16 seconds.\n",
+      "That all took 197.44 seconds.\n",
       "Chunk 2 of 3:\n",
       "Getting data... 0\n",
-      "That took 6.56 seconds.\n",
+      "That took 16.38 seconds.\n",
       "Getting data... 1\n",
-      "That took 6.11 seconds.\n",
+      "That took 9.35 seconds.\n",
       "Getting data... 2\n",
-      "That took 9.25 seconds.\n",
+      "That took 2.53 seconds.\n",
       "Getting data... 3\n",
-      "That took 5.45 seconds.\n",
+      "That took 5.69 seconds.\n",
       "Getting data... 4\n",
-      "That took 5.11 seconds.\n",
+      "That took 3.92 seconds.\n",
       "Getting data... 5\n",
-      "That took 5.2 seconds.\n",
+      "That took 5.39 seconds.\n",
       "Getting data... 6\n",
-      "That took 5.2 seconds.\n",
+      "That took 6.75 seconds.\n",
       "Getting data... 7\n",
-      "That took 5.82 seconds.\n",
+      "That took 18.88 seconds.\n",
       "Getting data... 8\n",
-      "That took 5.72 seconds.\n",
+      "That took 7.59 seconds.\n",
       "Getting data... 9\n",
-      "That took 7.26 seconds.\n",
+      "That took 7.46 seconds.\n",
       "Getting data... 10\n",
-      "That took 6.64 seconds.\n",
-      "Getting data... 11\n",
       "That took 5.74 seconds.\n",
+      "Getting data... 11\n",
+      "That took 7.41 seconds.\n",
       "Getting data... 12\n",
-      "That took 4.55 seconds.\n",
+      "That took 12.45 seconds.\n",
       "Getting data... 13\n",
-      "That took 3.85 seconds.\n",
+      "That took 7.39 seconds.\n",
       "Getting data... 14\n",
-      "That took 3.31 seconds.\n",
+      "That took 5.97 seconds.\n",
       "Getting data... 15\n",
-      "That took 3.14 seconds.\n",
+      "That took 12.02 seconds.\n",
       "Getting data... 16\n",
-      "That took 2.88 seconds.\n",
+      "That took 7.61 seconds.\n",
       "Getting data... 17\n",
-      "That took 2.62 seconds.\n",
+      "That took 8.01 seconds.\n",
       "Getting data... 18\n",
-      "That took 2.26 seconds.\n",
+      "That took 7.55 seconds.\n",
       "Getting data... 19\n",
-      "That took 1.81 seconds.\n",
+      "That took 6.55 seconds.\n",
       "Getting data... 20\n",
-      "That took 1.74 seconds.\n",
+      "That took 5.91 seconds.\n",
       "Getting data... 21\n",
-      "That took 2.11 seconds.\n",
+      "That took 4.93 seconds.\n",
       "Getting data... 22\n",
-      "That took 3.37 seconds.\n",
+      "That took 4.94 seconds.\n",
       "Getting data... 23\n",
-      "That took 5.27 seconds.\n",
+      "That took 3.99 seconds.\n",
       "Final formatting...\n",
       "Done\n",
-      "That all took 114.18 seconds.\n",
+      "That all took 187.63 seconds.\n",
       "Chunk 3 of 3:\n",
       "Getting data... 0\n",
-      "That took 5.61 seconds.\n",
+      "That took 3.52 seconds.\n",
       "Getting data... 1\n",
-      "That took 5.86 seconds.\n",
+      "That took 2.12 seconds.\n",
       "Getting data... 2\n",
-      "That took 5.34 seconds.\n",
+      "That took 2.02 seconds.\n",
       "Getting data... 3\n",
-      "That took 4.51 seconds.\n",
+      "That took 3.22 seconds.\n",
       "Getting data... 4\n",
-      "That took 4.39 seconds.\n",
+      "That took 4.3 seconds.\n",
       "Getting data... 5\n",
-      "That took 4.44 seconds.\n",
+      "That took 4.52 seconds.\n",
       "Getting data... 6\n",
-      "That took 4.51 seconds.\n",
+      "That took 6.06 seconds.\n",
       "Getting data... 7\n",
-      "That took 4.66 seconds.\n",
+      "That took 7.04 seconds.\n",
       "Getting data... 8\n",
-      "That took 5.05 seconds.\n",
+      "That took 11.79 seconds.\n",
       "Getting data... 9\n",
-      "That took 5.59 seconds.\n",
+      "That took 7.03 seconds.\n",
       "Getting data... 10\n",
-      "That took 5.68 seconds.\n",
+      "That took 5.24 seconds.\n",
       "Getting data... 11\n",
-      "That took 5.21 seconds.\n",
+      "That took 5.95 seconds.\n",
       "Getting data... 12\n",
-      "That took 3.81 seconds.\n",
+      "That took 5.1 seconds.\n",
       "Getting data... 13\n",
-      "That took 2.94 seconds.\n",
+      "That took 6.61 seconds.\n",
       "Getting data... 14\n",
-      "That took 2.64 seconds.\n",
+      "That took 6.53 seconds.\n",
       "Getting data... 15\n",
-      "That took 2.6 seconds.\n",
+      "That took 10.38 seconds.\n",
       "Getting data... 16\n",
-      "That took 2.57 seconds.\n",
+      "That took 7.28 seconds.\n",
       "Getting data... 17\n",
-      "That took 2.19 seconds.\n",
+      "That took 5.61 seconds.\n",
       "Getting data... 18\n",
-      "That took 1.78 seconds.\n",
+      "That took 7.25 seconds.\n",
       "Getting data... 19\n",
-      "That took 1.48 seconds.\n",
+      "That took 6.01 seconds.\n",
       "Getting data... 20\n",
-      "That took 4.1 seconds.\n",
+      "That took 5.66 seconds.\n",
       "Getting data... 21\n",
-      "That took 1.85 seconds.\n",
+      "That took 4.81 seconds.\n",
       "Getting data... 22\n",
-      "That took 2.59 seconds.\n",
+      "That took 4.67 seconds.\n",
       "Getting data... 23\n",
-      "That took 4.23 seconds.\n",
+      "That took 4.9 seconds.\n",
       "Final formatting...\n",
       "Done\n",
-      "That all took 95.34 seconds.\n",
-      "Whole thing took 345.69 seconds.\n"
+      "That all took 139.62 seconds.\n",
+      "Whole thing took 524.72 seconds.\n"
      ]
     }
    ],
@@ -359,11 +374,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open ('routes24h20181015v1.json','w') as outfile:\n",
+    "with open ('routes24h20181015v2.json','w') as outfile:\n",
     "    json.dump(allofem,outfile)\n",
     "# Final output is 185 MB, zips to 8 MB."
    ]
@@ -378,9 +393,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonData-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -392,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
