Propagate pull em all changes to code folder

--- a/main/code/pull em all.ipynb
+++ b/main/code/pull em all.ipynb
@@ -11,8 +11,8 @@
     "import json\n",
     "import math\n",
     "from datetime import datetime\n",
-    "import time"
-	"import os"
+    "import time\n",
+    "import os"
    ]
   },
   {
@@ -63,6 +63,7 @@
     "                  lat\n",
     "                  lon\n",
     "                  heading\n",
+    "                  did\n",
     "                }}\n",
     "              }}\n",
     "            }}\n",
@@ -79,11 +80,11 @@
     "        data = json.loads(r.text)\n",
     "        try:\n",
     "            data['data']\n",
+    "            \n",
+    "            if len(data['data']['trynState']['routes']):\n",
+    "                route_data.extend(data['data']['trynState']['routes'])\n",
     "        except KeyError:\n",
-    "            print(data)\n",
-    "        \n",
-    "        if len(data['data']['trynState']['routes']):\n",
-    "            route_data.extend(data['data']['trynState']['routes'])\n",
+    "            print(f\"Keyerror on {route} at {dt_params}\")\n",
     "    \n",
     "    r_sort = {}\n",
     "    print('Final formatting...')\n",
@@ -365,7 +366,7 @@
    "outputs": [],
    "source": [
     "with open(os.path.join('..','data','routes24hv1.json'),'w') as outfile:\n",
-    "    json.dump(allofem,outfile)\n",
+    "    json.dump(allofem,outfile)\n"
    ]
   },
   {
