--- a/kevin/pull em all.ipynb
+++ b/kevin/pull em all.ipynb
@@ -11,7 +11,8 @@
     "import json\n",
     "import math\n",
     "from datetime import datetime\n",
-    "import time"
+    "import time\n",
+    "import os"
    ]
   },
   {
@@ -85,8 +86,6 @@
     "        except KeyError:\n",
     "            print(f\"Keyerror on {route} at {dt_params}\")\n",
     "        \n",
-    "        \n",
-    "    \n",
     "    r_sort = {}\n",
     "    print('Final formatting...')\n",
     "    for x in route_data:\n",
@@ -393,7 +392,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -407,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
