Add viz examples for 24h set, clean up error message

--- a/kevin/pull em all.ipynb
+++ b/kevin/pull em all.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
     "            if len(data['data']['trynState']['routes']):\n",
     "                route_data.extend(data['data']['trynState']['routes'])\n",
     "        except KeyError:\n",
-    "            print(f\"Keyerror on {route} at {dt_params}\")\n",
+    "            print(f\"Error for time range {startTime}-{endTime}.\")\n",
     "        \n",
     "    r_sort = {}\n",
     "    print('Final formatting...')\n",
@@ -118,12 +118,12 @@
      "output_type": "stream",
      "text": [
       "Getting data... 0\n",
-      "That took 9.77 seconds.\n",
+      "That took 9.34 seconds.\n",
       "Getting data... 1\n",
-      "That took 5.93 seconds.\n",
+      "That took 6.29 seconds.\n",
       "Final formatting...\n",
       "Done\n",
-      "That all took 15.81 seconds.\n"
+      "That all took 15.74 seconds.\n"
      ]
     }
    ],
