--- a/main/code/pull em all.ipynb
+++ b/main/code/pull em all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
     "            if len(data['data']['trynState']['routes']):\n",
     "                route_data.extend(data['data']['trynState']['routes'])\n",
     "        except KeyError:\n",
-    "            print(f\"Keyerror on {route} at {dt_params}\")\n",
+    "            print(f\"Error for time range {startTime}-{endTime}.\")\n",
     "    \n",
     "    r_sort = {}\n",
     "    print('Final formatting...')\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
    "outputs": [],
    "source": [
     "with open(os.path.join('..','data','routes24hv1.json'),'w') as outfile:\n",
-    "    json.dump(allofem,outfile)\n"
+    "    json.dump(allofem,outfile)"
    ]
   },
   {
