--- a/kevin/pull em all.ipynb
+++ b/kevin/pull em all.ipynb
@@ -80,11 +80,11 @@
     "        data = json.loads(r.text)\n",
     "        try:\n",
     "            data['data']\n",
-    "            \n",
-    "            if len(data['data']['trynState']['routes']):\n",
-    "                route_data.extend(data['data']['trynState']['routes'])\n",
     "        except KeyError:\n",
     "            print(f\"Error for time range {startTime}-{endTime}.\")\n",
+    "        else:\n",
+    "            if len(data['data']['trynState']['routes']):\n",
+    "                route_data.extend(data['data']['trynState']['routes'])\n",
     "        \n",
     "    r_sort = {}\n",
     "    print('Final formatting...')\n",
