--- a/kevin/pull em all.ipynb
+++ b/kevin/pull em all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,7 @@
     "        start_time = timestamp + i*36e5/per_hour\n",
     "        end_time   = start_time + 36e5/per_hour\n",
     "\n",
+    "        # added direction id to query, needed to obtain stops\n",
     "        query = f\"\"\"{{\n",
     "          trynState(agency: \"muni\", startTime: \"{start_time}\", endTime: \"{end_time}\", routes: {list_string(route)}) {{\n",
     "            agency\n",
@@ -71,19 +72,20 @@
     "        \"\"\" # Braces need to be doubled for f-string\n",
     "\n",
     "        query_url = \"https://06o8rkohub.execute-api.us-west-2.amazonaws.com/dev/graphql?query=\"+query\n",
-    "#         print(query_url)\n",
     "        print('Getting data...',i)\n",
     "        r = requests.get(query_url)\n",
     "        print(f'That took {round(time.time()-t0,2)} seconds.')\n",
     "\n",
     "        data = json.loads(r.text)\n",
+    "        \n",
     "        try:\n",
     "            data['data']\n",
     "            \n",
     "            if len(data['data']['trynState']['routes']):\n",
     "                route_data.extend(data['data']['trynState']['routes'])\n",
-    "        except KeyError:\n",
-    "            print(f\"Keyerror on {route} at {dt_params}\")\n",
+    "        except KeyError as err:\n",
+    "            print(f\"Keyerror on {route} at {dt_params} at {timestamp}: {err}\")\n",
+    "            print(f\"Query: {data}\")\n",
     "        \n",
     "        \n",
     "    \n",
@@ -96,7 +98,6 @@
     "    r_sort=list(r_sort.values())\n",
     "    print('Done')\n",
     "    print(f'That all took {round(time.time()-T0,2)} seconds.')\n",
-    "#     return route_data\n",
     "    return r_sort"
    ]
   },
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -119,12 +120,12 @@
      "output_type": "stream",
      "text": [
       "Getting data... 0\n",
-      "That took 9.77 seconds.\n",
+      "That took 6.56 seconds.\n",
       "Getting data... 1\n",
-      "That took 5.93 seconds.\n",
+      "That took 4.28 seconds.\n",
       "Final formatting...\n",
       "Done\n",
-      "That all took 15.81 seconds.\n"
+      "That all took 11.08 seconds.\n"
      ]
     }
    ],
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,16 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get24all(dt_params=(2018,10,15,7)):\n",
     "    result = []\n",
     "    t0=time.time()\n",
-    "    for i in range(3):\n",
-    "        print(f'Chunk {i+1} of 3:')\n",
-    "        result.extend(get_some_times(all_routes[i*30:(i+1)*30],dt_params,hours=24))\n",
+    "    # changing the query reduced the number of routes that it could handle before causing errors\n",
+    "    # divide up the routes into 4 sets of 21\n",
+    "    for i in range(4):\n",
+    "        print(f'Chunk {i+1} of 4:')\n",
+    "        result.extend(get_some_times(all_routes[i*21:(i+1)*21],dt_params,hours=24))\n",
     "    print(f'Whole thing took {round(time.time()-t0,2)} seconds.')\n",
     "    return result"
    ]
@@ -180,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -189,175 +192,215 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chunk 1 of 3:\n",
+      "Chunk 1 of 4:\n",
       "Getting data... 0\n",
-      "That took 18.24 seconds.\n",
+      "That took 3.26 seconds.\n",
       "Getting data... 1\n",
-      "That took 4.52 seconds.\n",
+      "That took 9.12 seconds.\n",
       "Getting data... 2\n",
-      "That took 4.24 seconds.\n",
+      "That took 13.53 seconds.\n",
       "Getting data... 3\n",
-      "That took 4.0 seconds.\n",
+      "That took 3.93 seconds.\n",
       "Getting data... 4\n",
-      "That took 5.14 seconds.\n",
+      "That took 3.95 seconds.\n",
       "Getting data... 5\n",
-      "That took 15.34 seconds.\n",
-      "Getting data... 6\n",
-      "That took 7.55 seconds.\n",
-      "Getting data... 7\n",
-      "That took 6.5 seconds.\n",
-      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
-      "Getting data... 8\n",
-      "That took 13.48 seconds.\n",
-      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
-      "Getting data... 9\n",
-      "That took 14.04 seconds.\n",
-      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
-      "Getting data... 10\n",
-      "That took 5.84 seconds.\n",
-      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
-      "Getting data... 11\n",
-      "That took 7.06 seconds.\n",
-      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
-      "Getting data... 12\n",
-      "That took 6.72 seconds.\n",
-      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
-      "Getting data... 13\n",
-      "That took 7.27 seconds.\n",
-      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
-      "Getting data... 14\n",
-      "That took 9.73 seconds.\n",
-      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
-      "Getting data... 15\n",
-      "That took 6.87 seconds.\n",
-      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
-      "Getting data... 16\n",
-      "That took 7.39 seconds.\n",
-      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
-      "Getting data... 17\n",
-      "That took 9.89 seconds.\n",
-      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
-      "Getting data... 18\n",
-      "That took 7.03 seconds.\n",
-      "Keyerror on ['1', '2', '3', '5', '6', '7', '8', '9', '10', '12', '14', '18', '19', '21', '22', '23', '24', '25', '27', '28', '29', '30', '31', '33', '35', '36', '37', '38', '39', '41'] at (2018, 10, 15, 0)\n",
-      "Getting data... 19\n",
-      "That took 7.36 seconds.\n",
-      "Getting data... 20\n",
-      "That took 9.48 seconds.\n",
-      "Getting data... 21\n",
-      "That took 8.4 seconds.\n",
-      "Getting data... 22\n",
-      "That took 4.57 seconds.\n",
-      "Getting data... 23\n",
-      "That took 5.11 seconds.\n",
-      "Final formatting...\n",
-      "Done\n",
-      "That all took 197.44 seconds.\n",
-      "Chunk 2 of 3:\n",
-      "Getting data... 0\n",
-      "That took 16.38 seconds.\n",
-      "Getting data... 1\n",
-      "That took 9.35 seconds.\n",
-      "Getting data... 2\n",
-      "That took 2.53 seconds.\n",
-      "Getting data... 3\n",
-      "That took 5.69 seconds.\n",
-      "Getting data... 4\n",
-      "That took 3.92 seconds.\n",
-      "Getting data... 5\n",
-      "That took 5.39 seconds.\n",
-      "Getting data... 6\n",
       "That took 6.75 seconds.\n",
+      "Getting data... 6\n",
+      "That took 6.95 seconds.\n",
       "Getting data... 7\n",
-      "That took 18.88 seconds.\n",
+      "That took 7.57 seconds.\n",
       "Getting data... 8\n",
-      "That took 7.59 seconds.\n",
+      "That took 6.15 seconds.\n",
       "Getting data... 9\n",
-      "That took 7.46 seconds.\n",
+      "That took 7.62 seconds.\n",
       "Getting data... 10\n",
-      "That took 5.74 seconds.\n",
+      "That took 7.35 seconds.\n",
       "Getting data... 11\n",
-      "That took 7.41 seconds.\n",
+      "That took 7.44 seconds.\n",
       "Getting data... 12\n",
-      "That took 12.45 seconds.\n",
+      "That took 5.76 seconds.\n",
       "Getting data... 13\n",
-      "That took 7.39 seconds.\n",
+      "That took 7.37 seconds.\n",
       "Getting data... 14\n",
-      "That took 5.97 seconds.\n",
+      "That took 26.8 seconds.\n",
       "Getting data... 15\n",
-      "That took 12.02 seconds.\n",
+      "That took 10.94 seconds.\n",
       "Getting data... 16\n",
-      "That took 7.61 seconds.\n",
+      "That took 7.85 seconds.\n",
       "Getting data... 17\n",
       "That took 8.01 seconds.\n",
       "Getting data... 18\n",
-      "That took 7.55 seconds.\n",
+      "That took 7.98 seconds.\n",
       "Getting data... 19\n",
-      "That took 6.55 seconds.\n",
+      "That took 6.75 seconds.\n",
       "Getting data... 20\n",
-      "That took 5.91 seconds.\n",
+      "That took 10.97 seconds.\n",
       "Getting data... 21\n",
-      "That took 4.93 seconds.\n",
+      "That took 10.42 seconds.\n",
       "Getting data... 22\n",
-      "That took 4.94 seconds.\n",
+      "That took 5.8 seconds.\n",
       "Getting data... 23\n",
-      "That took 3.99 seconds.\n",
+      "That took 10.06 seconds.\n",
       "Final formatting...\n",
       "Done\n",
-      "That all took 187.63 seconds.\n",
-      "Chunk 3 of 3:\n",
+      "That all took 406.03 seconds.\n",
+      "Chunk 2 of 4:\n",
       "Getting data... 0\n",
-      "That took 3.52 seconds.\n",
+      "That took 4.87 seconds.\n",
       "Getting data... 1\n",
-      "That took 2.12 seconds.\n",
+      "That took 4.05 seconds.\n",
       "Getting data... 2\n",
-      "That took 2.02 seconds.\n",
+      "That took 3.95 seconds.\n",
       "Getting data... 3\n",
-      "That took 3.22 seconds.\n",
+      "That took 3.99 seconds.\n",
       "Getting data... 4\n",
-      "That took 4.3 seconds.\n",
+      "That took 4.46 seconds.\n",
       "Getting data... 5\n",
-      "That took 4.52 seconds.\n",
+      "That took 5.48 seconds.\n",
       "Getting data... 6\n",
-      "That took 6.06 seconds.\n",
+      "That took 6.27 seconds.\n",
       "Getting data... 7\n",
-      "That took 7.04 seconds.\n",
+      "That took 7.22 seconds.\n",
       "Getting data... 8\n",
-      "That took 11.79 seconds.\n",
+      "That took 7.43 seconds.\n",
       "Getting data... 9\n",
-      "That took 7.03 seconds.\n",
+      "That took 7.42 seconds.\n",
       "Getting data... 10\n",
-      "That took 5.24 seconds.\n",
+      "That took 7.01 seconds.\n",
       "Getting data... 11\n",
-      "That took 5.95 seconds.\n",
+      "That took 7.03 seconds.\n",
       "Getting data... 12\n",
-      "That took 5.1 seconds.\n",
+      "That took 6.89 seconds.\n",
       "Getting data... 13\n",
-      "That took 6.61 seconds.\n",
+      "That took 7.46 seconds.\n",
       "Getting data... 14\n",
-      "That took 6.53 seconds.\n",
+      "That took 7.01 seconds.\n",
       "Getting data... 15\n",
-      "That took 10.38 seconds.\n",
+      "That took 7.29 seconds.\n",
       "Getting data... 16\n",
-      "That took 7.28 seconds.\n",
+      "That took 7.38 seconds.\n",
       "Getting data... 17\n",
-      "That took 5.61 seconds.\n",
+      "That took 7.83 seconds.\n",
       "Getting data... 18\n",
-      "That took 7.25 seconds.\n",
+      "That took 11.61 seconds.\n",
       "Getting data... 19\n",
-      "That took 6.01 seconds.\n",
+      "That took 5.92 seconds.\n",
       "Getting data... 20\n",
-      "That took 5.66 seconds.\n",
+      "That took 6.16 seconds.\n",
       "Getting data... 21\n",
-      "That took 4.81 seconds.\n",
+      "That took 5.52 seconds.\n",
       "Getting data... 22\n",
-      "That took 4.67 seconds.\n",
+      "That took 14.85 seconds.\n",
       "Getting data... 23\n",
-      "That took 4.9 seconds.\n",
+      "That took 5.21 seconds.\n",
       "Final formatting...\n",
       "Done\n",
-      "That all took 139.62 seconds.\n",
-      "Whole thing took 524.72 seconds.\n"
+      "That all took 169.36 seconds.\n",
+      "Chunk 3 of 4:\n",
+      "Getting data... 0\n",
+      "That took 4.32 seconds.\n",
+      "Getting data... 1\n",
+      "That took 3.72 seconds.\n",
+      "Getting data... 2\n",
+      "That took 3.91 seconds.\n",
+      "Getting data... 3\n",
+      "That took 4.27 seconds.\n",
+      "Getting data... 4\n",
+      "That took 5.16 seconds.\n",
+      "Getting data... 5\n",
+      "That took 4.89 seconds.\n",
+      "Getting data... 6\n",
+      "That took 8.54 seconds.\n",
+      "Getting data... 7\n",
+      "That took 7.5 seconds.\n",
+      "Getting data... 8\n",
+      "That took 6.64 seconds.\n",
+      "Getting data... 9\n",
+      "That took 6.5 seconds.\n",
+      "Getting data... 10\n",
+      "That took 5.76 seconds.\n",
+      "Getting data... 11\n",
+      "That took 5.82 seconds.\n",
+      "Getting data... 12\n",
+      "That took 5.91 seconds.\n",
+      "Getting data... 13\n",
+      "That took 5.85 seconds.\n",
+      "Getting data... 14\n",
+      "That took 4.48 seconds.\n",
+      "Getting data... 15\n",
+      "That took 6.45 seconds.\n",
+      "Getting data... 16\n",
+      "That took 68.09 seconds.\n",
+      "Getting data... 17\n",
+      "That took 7.36 seconds.\n",
+      "Getting data... 18\n",
+      "That took 6.68 seconds.\n",
+      "Getting data... 19\n",
+      "That took 5.58 seconds.\n",
+      "Getting data... 20\n",
+      "That took 5.12 seconds.\n",
+      "Getting data... 21\n",
+      "That took 4.63 seconds.\n",
+      "Getting data... 22\n",
+      "That took 4.7 seconds.\n",
+      "Getting data... 23\n",
+      "That took 5.41 seconds.\n",
+      "Final formatting...\n",
+      "Done\n",
+      "That all took 423.85 seconds.\n",
+      "Chunk 4 of 4:\n",
+      "Getting data... 0\n",
+      "That took 4.93 seconds.\n",
+      "Getting data... 1\n",
+      "That took 3.78 seconds.\n",
+      "Getting data... 2\n",
+      "That took 3.03 seconds.\n",
+      "Getting data... 3\n",
+      "That took 3.59 seconds.\n",
+      "Getting data... 4\n",
+      "That took 4.19 seconds.\n",
+      "Getting data... 5\n",
+      "That took 5.66 seconds.\n",
+      "Getting data... 6\n",
+      "That took 8.12 seconds.\n",
+      "Getting data... 7\n",
+      "That took 6.09 seconds.\n",
+      "Getting data... 8\n",
+      "That took 7.95 seconds.\n",
+      "Getting data... 9\n",
+      "That took 7.67 seconds.\n",
+      "Getting data... 10\n",
+      "That took 6.43 seconds.\n",
+      "Getting data... 11\n",
+      "That took 8.98 seconds.\n",
+      "Getting data... 12\n",
+      "That took 6.05 seconds.\n",
+      "Getting data... 13\n",
+      "That took 6.48 seconds.\n",
+      "Getting data... 14\n",
+      "That took 6.33 seconds.\n",
+      "Getting data... 15\n",
+      "That took 6.74 seconds.\n",
+      "Getting data... 16\n",
+      "That took 7.08 seconds.\n",
+      "Getting data... 17\n",
+      "That took 8.49 seconds.\n",
+      "Getting data... 18\n",
+      "That took 10.89 seconds.\n",
+      "Getting data... 19\n",
+      "That took 6.85 seconds.\n",
+      "Getting data... 20\n",
+      "That took 5.03 seconds.\n",
+      "Getting data... 21\n",
+      "That took 4.68 seconds.\n",
+      "Getting data... 22\n",
+      "That took 5.44 seconds.\n",
+      "Getting data... 23\n",
+      "That took 16.13 seconds.\n",
+      "Final formatting...\n",
+      "Done\n",
+      "That all took 163.89 seconds.\n",
+      "Whole thing took 1176.24 seconds.\n"
      ]
     }
    ],
@@ -374,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
